--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-slider": "^2.0.6",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4",
     "wow.js": "^1.2.2"
